Position and z-index hud and canvas correctly

--- a/src/styles/screen.styl
+++ b/src/styles/screen.styl
@@ -1,5 +1,6 @@
 .wowser .screen
   absolute: top 0 left 0
+  z-index: 3
   width: 100%
   height: 100%
   display: flex
