--- a/src/styles/wowser.styl
+++ b/src/styles/wowser.styl
@@ -20,7 +20,7 @@ html, body
 
   .branding
     absolute: top 10px right 10px
-    z-index: 2
+    z-index: 4
 
     header
       width: 204px
@@ -37,4 +37,4 @@ html, body
 
   select.screen-selector
     absolute: top 100px right 10px
-    z-index: 1
+    z-index: 4
